update login token

--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -48,12 +48,14 @@
             Accesibilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">WCAG-AA</a></li> 
+            <li><a class="dropdown-item" href="#">Legibilidad</a></li>
+            <li><a class="dropdown-item" href="#">Imágenes</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+            <li><a class="dropdown-item" href="#">WCAG-AAA</a></li>
+            <li><a class="dropdown-item" href="#">Ortografia</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -62,12 +64,18 @@
             SEO
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Meta tags</a></li>
+            <li><a class="dropdown-item" href="#">OpenGraph</a></li>
+            <li><a class="dropdown-item" href="#">Encabezados</a></li>
+            <li><a class="dropdown-item" href="#">Velocidad</a></li>
+            <li><a class="dropdown-item" href="#">Enlaces Rotos</a></li>
+            <li><a class="dropdown-item" href="#">Imágenes</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+            <li><a class="dropdown-item" href="#">Keyword Research</a></li>
+            <li><a class="dropdown-item" href="#">Ranking</a></li>
+            <li><a class="dropdown-item" href="#">Link Building</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
