--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -33,7 +33,7 @@
             Dominios
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">WHOIS</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li>
               <hr class="dropdown-divider">
