--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -19,12 +19,26 @@
             Email
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">MX Discover</a></li>
+            <li><a class="dropdown-item" href="#">DMARC</a></li>
+            <li><a class="dropdown-item" href="#">SPF Lookup</a></li>
+            <li><a class="dropdown-item" href="#">DKIM Lookup</a></li>
+            <li><a class="dropdown-item" href="#">TXT Lookup</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+            <li><a class="dropdown-item" href="#">DNS Key</a></li>
+            <li><a class="dropdown-item" href="#">LOC entry</a></li>
+            <li><a class="dropdown-item" href="#">IP Sec Key</a></li>
+            <li><a class="dropdown-item" href="#">RRSIG Lookup</a></li>
+            <li><a class="dropdown-item" href="#">NSECLookup</a></li>
+            <li><a class="dropdown-item" href="#">MTA STS</a></li>
+            <li><a class="dropdown-item" href="#">NSEC3PARAM</a></li>
+            <li><a class="dropdown-item" href="#">SRV Lookup</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Blacklist</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -34,11 +48,24 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">WHOIS</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">HTTP/SSL Check</a></li>
+            <li><a class="dropdown-item" href="#">CName</a></li>
+            <li><a class="dropdown-item" href="#">Reverse domain</a></li>
+            <li><a class="dropdown-item" href="#">IP Lookup</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+            <li><a class="dropdown-item" href="#">DNS Lookup</a></li>
+            <li><a class="dropdown-item" href="#">AAAA Lookup</a></li>
+            <li><a class="dropdown-item" href="#">SOA Lookup</a></li>
+            <li><a class="dropdown-item" href="#">ASN Lookup</a></li>
+            <li><a class="dropdown-item" href="#">Arin Lookup</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Traceroute</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Nmap</a></li>
+            
           </ul>
         </li>
 
@@ -48,14 +75,20 @@
             Accesibilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">WCAG-AA</a></li> 
+            <li><a class="dropdown-item" href="#">WCAG-AA/AAA</a></li> 
+            <li><a class="dropdown-item" href="#">Navegación</a></li>
             <li><a class="dropdown-item" href="#">Legibilidad</a></li>
-            <li><a class="dropdown-item" href="#">Imágenes</a></li>
+            <li><a class="dropdown-item" href="#">Compatibilidad</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">WCAG-AAA</a></li>
-            <li><a class="dropdown-item" href="#">Ortografia</a></li>
+            <li><a class="dropdown-item" href="#">Velocidad</a></li>
+            <li><a class="dropdown-item" href="#">Core Web Vitals</a></li>
+            <li><a class="dropdown-item" href="#">Responsive</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Ortografia</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -64,33 +97,57 @@
             SEO
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Meta tags</a></li>
-            <li><a class="dropdown-item" href="#">OpenGraph</a></li>
+
+            <li><a class="dropdown-item" href="#">Titulos</a></li>
+            <li><a class="dropdown-item" href="#">Meta Description</a></li>
+            <li><a class="dropdown-item" href="#">Meta Keywords</a></li>
             <li><a class="dropdown-item" href="#">Encabezados</a></li>
-            <li><a class="dropdown-item" href="#">Velocidad</a></li>
-            <li><a class="dropdown-item" href="#">Enlaces Rotos</a></li>
-            <li><a class="dropdown-item" href="#">Imágenes</a></li>
+            <li><a class="dropdown-item" href="#">Imagenes</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Keyword Research</a></li>
-            <li><a class="dropdown-item" href="#">Ranking</a></li>
-            <li><a class="dropdown-item" href="#">Link Building</a></li>
+            <li><a class="dropdown-item" href="#">Canonicals</a></li>
+            <li><a class="dropdown-item" href="#">Directives</a></li>
+            <li><a class="dropdown-item" href="#">Shemaorg</a></li>
+            <li><a class="dropdown-item" href="#">OpenGraph</a></li>
+            <li><a class="dropdown-item" href="#">HrefLang</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Enlaces Rotos</a></li>
+            <li><a class="dropdown-item" href="#">Enlaces Salientes</a></li>
+            <li><a class="dropdown-item" href="#">Backlinks</a></li>
+            <li><a class="dropdown-item" href="#">robots.txt</a></li>
+            <li><a class="dropdown-item" href="#">Sitemap</a></li>
+            <li><a class="dropdown-item" href="#">URLs</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Usabilidad
+            Seguridad
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+            <li><a class="dropdown-item" href="#">X-Tags</a></li>
+            <li><a class="dropdown-item" href="#">Header Info</a></li>
+            <li><a class="dropdown-item" href="#">HTTPS/SSL</a></li>
+            <li><a class="dropdown-item" href="#">Server Response</a></li>
+            <li><a class="dropdown-item" href="#">CMS Audit</a></li>
           </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fa-solid fa-crown"></i> Informes
+          </a>
+          <!--
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">X-Tags</a></li>
+            <li><a class="dropdown-item" href="#">Header Info</a></li>
+            <li><a class="dropdown-item" href="#">HTTPS/SSL</a></li>
+            <li><a class="dropdown-item" href="#">Server Response</a></li>
+            <li><a class="dropdown-item" href="#">CMS Audit</a></li>
+          </ul> -->
         </li>
 
       </ul>
