--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -13,12 +13,46 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Announces</a>
         </li> -->
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Dominios
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>Information</li>
+            <li><a class="dropdown-item" href="#">WHOIS</a></li>
+            <li><a class="dropdown-item" href="#">HTTP/SSL Check</a></li>
+            <li><a class="dropdown-item" href="#">CName</a></li>
+            <li><a class="dropdown-item" href="#">Reverse domain</a></li>
+            <li><a class="dropdown-item" href="#">IP Lookup</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>DNS</li>
+            <li><a class="dropdown-item" href="#">DNS Lookup</a></li>
+            <li><a class="dropdown-item" href="#">AAAA Lookup</a></li>
+            <li><a class="dropdown-item" href="#">SOA Lookup</a></li>
+            <li><a class="dropdown-item" href="#">ASN Lookup</a></li>
+            <li><a class="dropdown-item" href="#">Arin Lookup</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>Discover</li>
+            <li><a class="dropdown-item" href="#">Traceroute</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Nmap</a></li>
+            
+          </ul>
+        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Email
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>Mail server</li>
             <li><a class="dropdown-item" href="#">MX Discover</a></li>
             <li><a class="dropdown-item" href="#">DMARC</a></li>
             <li><a class="dropdown-item" href="#">SPF Lookup</a></li>
@@ -27,6 +61,7 @@
             <li>
               <hr class="dropdown-divider">
             </li>
+            <li>Security</li>
             <li><a class="dropdown-item" href="#">DNS Key</a></li>
             <li><a class="dropdown-item" href="#">LOC entry</a></li>
             <li><a class="dropdown-item" href="#">IP Sec Key</a></li>
@@ -38,34 +73,8 @@
             <li>
               <hr class="dropdown-divider">
             </li>
+            <li>Reputation</li>
             <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Blacklist</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Dominios
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">WHOIS</a></li>
-            <li><a class="dropdown-item" href="#">HTTP/SSL Check</a></li>
-            <li><a class="dropdown-item" href="#">CName</a></li>
-            <li><a class="dropdown-item" href="#">Reverse domain</a></li>
-            <li><a class="dropdown-item" href="#">IP Lookup</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">DNS Lookup</a></li>
-            <li><a class="dropdown-item" href="#">AAAA Lookup</a></li>
-            <li><a class="dropdown-item" href="#">SOA Lookup</a></li>
-            <li><a class="dropdown-item" href="#">ASN Lookup</a></li>
-            <li><a class="dropdown-item" href="#">Arin Lookup</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Traceroute</a></li>
-            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Nmap</a></li>
-            
           </ul>
         </li>
 
@@ -75,20 +84,24 @@
             Accesibilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>Accessibility</li>
             <li><a class="dropdown-item" href="#">WCAG-AA/AAA</a></li> 
             <li><a class="dropdown-item" href="#">Navegación</a></li>
             <li><a class="dropdown-item" href="#">Legibilidad</a></li>
             <li><a class="dropdown-item" href="#">Compatibilidad</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
             <li><a class="dropdown-item" href="#">Velocidad</a></li>
             <li><a class="dropdown-item" href="#">Core Web Vitals</a></li>
             <li><a class="dropdown-item" href="#">Responsive</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Ortografia</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i>Ortografia</a></li>
+            <li>Image Optimization</li>
+            <li><a class="dropdown-item" href="#">Images</a></li> 
+            <li><a class="dropdown-item" href="#">Lazy Loading Images</a></li>
+            <li>Mobile Optimization</li>
+            <li><a class="dropdown-item" href="#">AMP Valid Page</a></li>
+            <li><a class="dropdown-item" href="#">Mobile Audit</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -103,17 +116,23 @@
             <li><a class="dropdown-item" href="#">Meta Keywords</a></li>
             <li><a class="dropdown-item" href="#">Encabezados</a></li>
             <li><a class="dropdown-item" href="#">Imagenes</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
             <li><a class="dropdown-item" href="#">Canonicals</a></li>
             <li><a class="dropdown-item" href="#">Directives</a></li>
             <li><a class="dropdown-item" href="#">Shemaorg</a></li>
             <li><a class="dropdown-item" href="#">OpenGraph</a></li>
             <li><a class="dropdown-item" href="#">HrefLang</a></li>
+            <li><a class="dropdown-item" href="#">URLs</a></li>
+            <li><a class="dropdown-item" href="#">Duplicate Content</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
+            <li>Crawling</li>
+            <li><a class="dropdown-item" href="#">OpenGraph</a></li>
+            <li><a class="dropdown-item" href="#">HrefLang</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>Link building</li>
             <li><a class="dropdown-item" href="#">Enlaces Rotos</a></li>
             <li><a class="dropdown-item" href="#">Enlaces Salientes</a></li>
             <li><a class="dropdown-item" href="#">Backlinks</a></li>
@@ -138,7 +157,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            <i class="fa-solid fa-crown"></i> Informes
+             Usabilidad
           </a>
           <!--
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -150,6 +169,34 @@
           </ul> -->
         </li>
 
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            i18
+          </a>
+          <!--
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">X-Tags</a></li>
+            <li><a class="dropdown-item" href="#">Header Info</a></li>
+            <li><a class="dropdown-item" href="#">HTTPS/SSL</a></li>
+            <li><a class="dropdown-item" href="#">Server Response</a></li>
+            <li><a class="dropdown-item" href="#">CMS Audit</a></li>
+          </ul> -->
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fa-solid fa-crown"></i> Informes
+          </a>
+          <!--
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">X-Tags</a></li>
+            <li><a class="dropdown-item" href="#">Header Info</a></li>
+            <li><a class="dropdown-item" href="#">HTTPS/SSL</a></li>
+            <li><a class="dropdown-item" href="#">Server Response</a></li>
+            <li><a class="dropdown-item" href="#">CMS Audit</a></li>
+          </ul> -->
+        </li>
       </ul>
       <ul class="navbar-nav">
         <!-- <li class="nav-item">
