--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
         --secondary-color: #6c757d; /* Color secundario */
         --background-color: #f8f9fa; /* Color de fondo */
         --text-color: #212529; /* Color de texto */
-        --info-color: #333080; /* Color de la barra de información */
+        --info-color: #7c71c5; /* Color de la barra de información */
         --navbar-background: white; /* Fondo de la barra de navegación */
         --navbar-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1); /* Sombra de la barra de navegación */
         --navbar-link: #333;
@@ -56,7 +56,7 @@
         color:var( --navbar-link);
     }
     .navbar-nav .dropdown-menu {
-        width: 800px;
+        width: 740px;
         box-shadow: var(--navbar-shadow);
     }
     .dropdown-menu .dropdown-item {
@@ -90,7 +90,7 @@
     }
     .dropdown-menu-columns .column {
         flex: 1;
-        min-width: 200px; 
+        min-width: 180px; 
         padding: 0 16px;
        /* */ 
     }
@@ -133,7 +133,7 @@
 
         /* Alinea el dropdown en el centro */
         .navbar-nav .dropdown-menu {
-            left: 50% !important;
+            left: 45% !important;
             right: auto !important;
             transform: translateX(-45%);
         }
