--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -6,8 +6,8 @@
 <!-- Top Bar -->
 <div class="top-bar d-flex justify-content-between px-3 bg-light">
   <div class="d-flex">
-    <a href="#" class="text-white me-3">Cita Comercial</a>
-
+   <!-- <a href="#" class="text-white me-3">Cita Comercial</a>
+   -->
       <a href="#" class="text-white me-3">Anunciarse</a>
 
     </div>
